Google+ going down. Tuning Twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Ryukyu kobujutsua ja Yuishinkai karatea Salon alueella">
     <meta name="keywords" content="ryukyu, kobujutsu, kobudo, yuishinkai, tapiola, karate, inoue, taira, bo, sai, kama, tonfa, nunchaku, tekko, surujin, tinbe, rochin, maegeri, mawashigeri, salo, finland">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="publisher" content="https://plus.google.com/113482930946713649361?rel=author">
     <meta property="og:title" content="Ryukyu kobujutsua ja Yuishinkai karatea Salon alueella">
     <meta property="og:description" content="Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun ja Yuishinkai karaten harjoittelua Salon alueella">
     <meta property="og:type" content="website">
@@ -15,7 +14,11 @@
     <meta property="og:image" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
     <meta property="og:image:secure_url" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
     <meta property="og:locale" content="fi_FI">
+    <meta name="twitter:image" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@paazmaya">
     <meta property="article:publisher" content="https://www.facebook.com/ryukyukobujutsufinland">
+    <meta property="article:author" content="https://www.facebook.com/paazmaya">
     <meta property="fb:app_id" content="306313113143801">
     <meta property="fb:admins" content="653289464">
     <meta name="application-name" content="Salon Yuishinkai ry"/>
