--- a/public/index.html
+++ b/public/index.html
@@ -56,5 +56,27 @@
       <p>&copy; Salon Yuishinkai ry (PRH 222.200)</p>
     </footer>
 
+    <script>
+    // Let's check if the browser supports notifications
+    if ("Notification" in window) {
+      // Let's check whether notification permissions have already been granted
+      if (Notification.permission === "granted") {
+        // If it's okay let's create a notification
+          var notification = new Notification("Hello there!", {
+            lang: 'fi',
+            body: 'Whats up today?',
+            icon: '/icons/icon-96x96.png'
+          });
+      }
+
+      // Otherwise, we need to ask the user for permission
+      else if (Notification.permission !== "denied") {
+        Notification.requestPermission().then(function (permission) {
+
+        });
+      }
+    }
+
+    </script>
   </body>
 </html>
