--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,26 @@
         <q>Oppiakseen uutta, tulee tutkia vanhaa.</q>
       </p>
     </section>
+    <section>
+      <h2>Kevätkaudella harjoitukset joka toisena lauantaina 18.1. - 23.5.2020</h2>
+      <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja.</p>
+      <p>Harjoitusaika kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina (18.1., 1.2., 15.2., 29.2., 14.3., 28.3., 11.4., 25.4., 9.5., ja 23.5.2020).</p>
+      <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
+        Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
+        harjoituskerralla keskittyä.</p>
+      <p>Harjoitusmaksuja on muutama eri vaihtoehto:</p>
+      <ul>
+        <li>Normaali kausimaksu 160 EUR</li>
+        <li>Haastajan kausimaksu 200 EUR, josta saa 100 EUR takaisin kauden päätyttyä kun on osallistunut kaikkiin harjoituksiin</li>
+        <li>Kertaharjoitusmaksu 20 EUR</li>
+      </ul>
+      <p>Harjoitusmaksut voi maksaa tilille (FI62 3939 0054 3946 71), Mobilepay:llä, tai käteisellä paikan päällä.</p>
+      <p>Lisätietoja ja ilmoittautumiset Jukka Paasoselle osoitteeseen jukka.paasonen@kobujutsu.fi.</p>
+    </section>
     <footer>
-      <p>&copy; Salon Yuishinkai ry (PRH 222.200)</p>
+      <p>&copy; Salon Yuishinkai ry (Y-tunnus: 3082703-3)</p>
     </footer>
+
 
     <script>
     var kataList = [
