Who is teaching?

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
     <section>
       <h2>Kevätkaudella harjoitukset joka toisena lauantaina 18.1. - 23.5.2020</h2>
       <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja.</p>
+      <p>Harjoitukset ohjaa Jukka Paasonen (3 dan karate &amp; kobujutsu).</p>
       <p>Harjoitusaika kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina (18.1., 1.2., 15.2., 29.2., 14.3., 28.3., 11.4., 25.4., 9.5., ja 23.5.2020).</p>
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
