--- a/public/index.html
+++ b/public/index.html
@@ -60,12 +60,12 @@
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
         harjoituskerralla keskittyä.</p>
-      <p>Harjoituksiin tulee ilmoittautua ennakkoon, joko koko kaudeksi tai viimeistään kaksi päivää ennen kutakin harjoitusta.
+      <p>Harjoituksiin tulee ilmoittautua ennakkoon, joko koko kaudeksi tai viimeistään kolme päivää ennen kutakin harjoitusta.
         Ilmoittautumisen yhteydessä toimita myös harjoitussuunnitelmasi, jotta ohjaaja voi valmistautua siihen.</p>
       <p>Harjoitusmaksuja on muutama eri vaihtoehto:</p>
       <ul>
         <li>Normaali kausimaksu 160 EUR</li>
-        <li>Haastajan kausimaksu 200 EUR, josta saa 100 EUR takaisin kauden päätyttyä kun on osallistunut kaikkiin harjoituksiin</li>
+        <li>Haastajan kausimaksu 200 EUR, josta saa 100 EUR takaisin kauden päätyttyä kun on osallistunut kaikkiin harjoituksiin (ilmoittaudu viimeistään 15.1.2020)</li>
         <li>Kertaharjoitusmaksu 30 EUR</li>
       </ul>
       <p>Harjoitusmaksut voi maksaa tilille (FI62 3939 0054 3946 71), Mobilepay:llä, tai käteisellä paikan päällä.
