Where to get in

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <meta name="msapplication-square150x150logo" content="/icons/icon-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="/icons/icon-310x150.png" />
     <meta name="msapplication-square310x310logo" content="/icons/icon-310x310.png" />
-    <link href="/assets/default.css?51b1eadade5abbcec126e7c5953e297194dbc72c" rel="stylesheet">
+    <link href="/assets/default.css?dade5abbcec126e7c5953e297194dbc72c" rel="stylesheet">
   </head>
   <body>
 
@@ -47,16 +47,16 @@
         Salon Yuishinkai
       </h1>
     </header>
-    <section role="main">
+    <section>
       <p>
         <q>Oppiakseen uutta, tulee tutkia vanhaa.</q>
       </p>
     </section>
-    <section>
+    <section role="main">
       <h2>Kevätkaudella harjoitukset joka toisena lauantaina 18.1. - 23.5.2020</h2>
-      <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja.</p>
+      <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja. <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.</p>
       <p>Harjoitukset ohjaa Jukka Paasonen (3 dan karate &amp; kobujutsu).</p>
-      <p>Harjoitusaika kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina (18.1., 1.2., 15.2., 29.2., 14.3., 28.3., 11.4., 25.4., 9.5., ja 23.5.2020).</p>
+      <p>Harjoitusaika on kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina (18.1., 1.2., 15.2., 29.2., 14.3., 28.3., 11.4., 25.4., 9.5., ja 23.5.2020).</p>
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
         harjoituskerralla keskittyä.</p>
@@ -71,6 +71,9 @@
       <p>Harjoitusmaksut voi maksaa tilille (FI62 3939 0054 3946 71), Mobilepay:llä, tai käteisellä paikan päällä.
         Huolehdithan maksuista etukäteen ja kausimaksut mielellään suoraan tilille.</p>
       <p id="sahkoposti">Lisätietoja ja ilmoittautumiset Jukka Paasoselle osoitteeseen jukka.paasonen [appappaapa] kobujutsu.fi.</p>
+      <p>Palautetta harjoituksista voi laittaa <a href="https://docs.google.com/forms/d/e/1FAIpQLScMlKxrFPcv57UQwYC-FIuwtRO2Fl_BBUdN84FEw9XTjxWVvw/viewform" title="Palaute lomake">tämän nimettömän lomakkeen kautta</a>.</p>
+    </section>
+    <section>
       <h3>Harjoitusohjelma voi näyttää esimerkiksi tältä</h3>
       <p>Harjoittelijan nimi: Jukka Paasonen</p>
 
