--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <meta name="msapplication-square150x150logo" content="/icons/icon-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="/icons/icon-310x150.png" />
     <meta name="msapplication-square310x310logo" content="/icons/icon-310x310.png" />
-    <link href="/assets/default.css?dade5abbcec126e7c5953e297194dbc72c" rel="stylesheet">
+    <link href="/assets/default.css?cec126e7c5953e297194dbc72c" rel="stylesheet">
   </head>
   <body>
 
@@ -47,7 +47,7 @@
         Salon Yuishinkai
       </h1>
     </header>
-    <section>
+    <section role="complementary">
       <p>
         <q>Oppiakseen uutta, tulee tutkia vanhaa.</q>
       </p>
@@ -73,7 +73,7 @@
       <p id="sahkoposti">Lisätietoja ja ilmoittautumiset Jukka Paasoselle osoitteeseen jukka.paasonen [appappaapa] kobujutsu.fi.</p>
       <p>Palautetta harjoituksista voi laittaa <a href="https://docs.google.com/forms/d/e/1FAIpQLScMlKxrFPcv57UQwYC-FIuwtRO2Fl_BBUdN84FEw9XTjxWVvw/viewform" title="Palaute lomake">tämän nimettömän lomakkeen kautta</a>.</p>
     </section>
-    <section>
+    <section role="complementary">
       <h3>Harjoitusohjelma voi näyttää esimerkiksi tältä</h3>
       <p>Harjoittelijan nimi: Jukka Paasonen</p>
 
@@ -88,61 +88,61 @@
         </thead>
         <tbody>
           <tr>
-            <td scope="row">18.1.2020</td>
+            <th scope="row">18.1.2020</td>
             <td>Shuji dai</td>
             <td>Chatanyara no sai</td>
             <td>Nunchaku sho</td>
           </tr>
           <tr>
-            <td scope="row">1.2.2020</td>
+            <th scope="row">1.2.2020</td>
             <td>Sakugawa dai</td>
             <td>Yaraguwa no tonfa</td>
             <td>Surujin</td>
           </tr>
           <tr>
-            <td scope="row">15.2.2020</td>
+            <th scope="row">15.2.2020</td>
             <td>Soeishi dai</td>
             <td>Kanigawa no kama sho</td>
             <td>Kanigawa no tinbe</td>
           </tr>
           <tr>
-            <td scope="row">29.2.2020</td>
+            <th scope="row">29.2.2020</td>
             <td>Shirotaru dai</td>
             <td>Yakaa no sai</td>
             <td>Nunchaku dai</td>
           </tr>
           <tr>
-            <td scope="row">14.3.2020</td>
+            <th scope="row">14.3.2020</td>
             <td>Sueyoshi</td>
             <td>Hamahiga no tonfa</td>
             <td>Surujin</td>
           </tr>
           <tr>
-            <td scope="row">28.3.2020</td>
+            <th scope="row">28.3.2020</td>
             <td>Chatanyara</td>
             <td>Tozan no kama</td>
             <td>Kanigawa no tinbe</td>
           </tr>
           <tr>
-            <td scope="row">11.4.2020</td>
+            <th scope="row">11.4.2020</td>
             <td>Yonegawa</td>
             <td>Tawata no sai</td>
             <td>Nunchaku sho</td>
           </tr>
           <tr>
-            <td scope="row">25.4.2020</td>
+            <th scope="row">25.4.2020</td>
             <td>Shuji koshiki</td>
             <td>Kanigawa no kama dai</td>
             <td>Surujin</td>
           </tr>
           <tr>
-            <td scope="row">9.5.2020</td>
+            <th scope="row">9.5.2020</td>
             <td>Sakugawa chu</td>
             <td>Hamahiga no sai</td>
             <td>Kanigawa no tinbe</td>
           </tr>
           <tr>
-            <td scope="row">23.5.2020</td>
+            <th scope="row">23.5.2020</td>
             <td>Soeishi sho</td>
             <td>Jigen no manjisai</td>
             <td>Nunchaku dai</td>
