Sign language video is now available

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     <section role="complementary">
       <p>
         <q>Oppiakseen uutta, tulee tutkia vanhaa.</q>
+        <a href="https://youtu.be/uQIGGYr4gAg" title="Youtube video ">(Saatavana myös viittomakielisenä videona)</a>
       </p>
     </section>
     <section role="main">
