Rename icons to

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Salon Yuishinkai">
     <meta property="og:url" content="https://salo.kobujutsu.fi">
-    <meta property="og:image" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
-    <meta property="og:image:secure_url" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
+    <meta property="og:image" content="https://salo.kobujutsu.fi/icons/salon-yuishinkai-310x310.png">
+    <meta property="og:image:secure_url" content="https://salo.kobujutsu.fi/icons/salon-yuishinkai-310x310.png">
     <meta property="og:locale" content="fi_FI">
-    <meta name="twitter:image" content="https://salo.kobujutsu.fi/icons/icon-310x310.png">
+    <meta name="twitter:image" content="https://salo.kobujutsu.fi/icons/salon-yuishinkai-310x310.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@paazmaya">
     <meta property="article:publisher" content="https://www.facebook.com/ryukyukobujutsufinland">
@@ -22,27 +22,27 @@
     <meta property="fb:app_id" content="306313113143801">
     <meta property="fb:admins" content="653289464">
     <meta name="application-name" content="Salon Yuishinkai ry"/>
-    <link rel="apple-touch-icon" href="/icons/icon-310x310.png">
-    <link rel="icon" type="image/png" sizes="310x310" href="/icons/icon-310x310.png">
-    <link rel="icon" type="image/png" sizes="196x196" href="/icons/icon-196x196.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icons/icon-96x96.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16x16.png">
+    <link rel="apple-touch-icon" href="/icons/salon-yuishinkai-310x310.png">
+    <link rel="icon" type="image/png" sizes="310x310" href="/icons/salon-yuishinkai-310x310.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="/icons/salon-yuishinkai-196x196.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/salon-yuishinkai-96x96.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/salon-yuishinkai-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/salon-yuishinkai-16x16.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="theme-color" content="#EFEBE6">
     <meta name="msapplication-TileColor" content="#EFEBE6" />
-    <meta name="msapplication-TileImage" content="/icons/icon-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="/icons/icon-76x76.png" />
-    <meta name="msapplication-square150x150logo" content="/icons/icon-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="/icons/icon-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="/icons/icon-310x310.png" />
-    <link href="/assets/default.css?cec126e7c5953e297194dbc72c" rel="stylesheet">
+    <meta name="msapplication-TileImage" content="/icons/salon-yuishinkai-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="/icons/salon-yuishinkai-76x76.png" />
+    <meta name="msapplication-square150x150logo" content="/icons/salon-yuishinkai-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="/icons/salon-yuishinkai-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="/icons/salon-yuishinkai-310x310.png" />
+    <link href="/assets/default.css?cec126e7c5953e297194d2c" rel="stylesheet">
   </head>
   <body>
 
     <header>
-      <img src="/icons/icon-96x96.png" alt="" />
+      <img src="/icons/salon-yuishinkai-96x96.png" alt="" />
       <h1>
         Salon Yuishinkai
       </h1>
@@ -76,9 +76,9 @@
     </section>
     <section role="complementary">
       <h3>Harjoitusohjelma voi näyttää esimerkiksi tältä</h3>
-      <p>Harjoittelijan nimi: Jukka Paasonen</p>
 
       <table>
+        <caption>Harjoittelijan nimi: Jukka Paasonen</caption>
         <thead>
           <tr>
             <th scope="col">Päivämäärä</th>
