--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,9 @@
       </p>
     </section>
     <section role="main">
-      <h2>Harjoitukset peruttu ainakin ajalla 16.3. - 13.4.2020</h2>
+      <h2>Harjoitukset peruttu ainakin ajalla 16.3. - 13.5.2020</h2>
       <p>Vallitsevan koronavirustilanteen (COVID-19) vuoksi Salon Yuishinkai ry:n harjoitukset on peruttu toistaiseksi,
-        ainakin ajanjaksolle 16.3. - 13.4.2020.
+        ainakin ajanjaksolle 16.3. - 13.5.2020.
         Muutoksista ilmoitetaan tällä sivulla ja kevätkautena harjoituksiin osallistuineille sähköpostitse.
       </p>
   </section>
@@ -65,7 +65,7 @@
       <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja. <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.</p>
       <p>Harjoitukset ohjaa Jukka Paasonen (3 dan karate &amp; kobujutsu).</p>
       <p>Harjoitusaika on kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina
-        (18.1., 1.2., 15.2., 29.2., 14.3., <del datetime="2020-03-17">28.3., 11.4.,</del> 25.4., 9.5., ja 23.5.2020).</p>
+        (18.1., 1.2., 15.2., 29.2., 14.3., <del datetime="2020-03-17">28.3., 11.4.,</del> <del datetime="2020-04-14">25.4., 9.5.,</del> ja 23.5.2020).</p>
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
         harjoituskerralla keskittyä.</p>
