--- a/public/index.html
+++ b/public/index.html
@@ -54,18 +54,19 @@
       </p>
     </section>
     <section role="main">
-      <h2>Harjoitukset peruttu koko kevätkauden 16.3.2020 alkaen</h2>
-      <p>Vallitsevan koronavirustilanteen (COVID-19) vuoksi Salon Yuishinkai ry:n harjoitukset on peruttu
-        16.3.2020 alkaen, joka valitettavasti lopulta jatkui koko kevätkauden.
-        Muutoksista ilmoitetaan tällä sivulla ja kevätkautena harjoituksiin osallistuineille sähköpostitse.
+      <h2>Okinawalaisia kamppailutaitoja aseella ja ilman</h2>
+      <p>Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun (emonojutsu) ja Yuishinkai karaten (toshujutsu) harjoittelua itäisen Varsinais-Suomen ja läntisen Uudenmaan alueilla.
+        Esimerkiksi keväällä 2020 harjoiteltiin kata-ohjelmaa Lohjalla.
       </p>
-  </section>
+      <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (3 dan karate &amp; kobujutsu), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
+    </section>
+
+    <!--
     <section role="complementary">
       <h2>Kevätkaudella harjoitukset joka toisena lauantaina 18.1. - 23.5.2020</h2>
       <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja. <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.</p>
       <p>Harjoitukset ohjaa Jukka Paasonen (3 dan karate &amp; kobujutsu).</p>
-      <p>Harjoitusaika on kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina
-        (18.1., 1.2., 15.2., 29.2., 14.3., <del datetime="2020-03-17">28.3., 11.4.,</del> <del datetime="2020-04-14">25.4., 9.5.,</del> ja <del datetime="2020-05-20">23.5.2020</del>).</p>
+      <p>Harjoitusaika on kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina.</p>
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
         harjoituskerralla keskittyä.</p>
@@ -77,89 +78,13 @@
         <li>Haastajan kausimaksu 200 EUR, josta saa 100 EUR takaisin kauden päätyttyä kun on osallistunut kaikkiin harjoituksiin (ilmoittaudu viimeistään 15.1.2020)</li>
         <li>Kertaharjoitusmaksu 30 EUR</li>
       </ul>
-      <p>Harjoitusmaksut voi maksaa tilille (FI62 3939 0054 3946 71), Mobilepay:llä, tai käteisellä paikan päällä.
+      <p>Harjoitusmaksut voi maksaa tilille (FI62 3939 0054 3946 71) tai Mobilepay:llä.
         Huolehdithan maksuista etukäteen ja kausimaksut mielellään suoraan tilille.</p>
       <p id="sahkoposti">Lisätietoja ja ilmoittautumiset Jukka Paasoselle osoitteeseen jukka.paasonen [appappaapa] kobujutsu.fi.</p>
       <p>Palautetta harjoituksista voi laittaa <a href="https://docs.google.com/forms/d/e/1FAIpQLScMlKxrFPcv57UQwYC-FIuwtRO2Fl_BBUdN84FEw9XTjxWVvw/viewform" title="Palaute lomake">tämän nimettömän lomakkeen kautta</a>.</p>
     </section>
-    <section role="complementary">
-      <h3>Harjoitusohjelma voi näyttää esimerkiksi tältä</h3>
+    -->
 
-      <table>
-        <caption>Harjoittelijan nimi: Jukka Paasonen</caption>
-        <thead>
-          <tr>
-            <th scope="col">Päivämäärä</th>
-            <th scope="col">Bo</th>
-            <th scope="col">Sai / Tonfa  / Kama</th>
-            <th scope="col">Nunchaku / Surujin / Tinbe</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">18.1.2020</td>
-            <td>Shuji dai</td>
-            <td>Chatanyara no sai</td>
-            <td>Nunchaku sho</td>
-          </tr>
-          <tr>
-            <th scope="row">1.2.2020</td>
-            <td>Sakugawa dai</td>
-            <td>Yaraguwa no tonfa</td>
-            <td>Surujin</td>
-          </tr>
-          <tr>
-            <th scope="row">15.2.2020</td>
-            <td>Soeishi dai</td>
-            <td>Kanigawa no kama sho</td>
-            <td>Kanigawa no tinbe</td>
-          </tr>
-          <tr>
-            <th scope="row">29.2.2020</td>
-            <td>Shirotaru dai</td>
-            <td>Yakaa no sai</td>
-            <td>Nunchaku dai</td>
-          </tr>
-          <tr>
-            <th scope="row">14.3.2020</td>
-            <td>Sueyoshi</td>
-            <td>Hamahiga no tonfa</td>
-            <td>Surujin</td>
-          </tr>
-          <tr>
-            <th scope="row">28.3.2020</td>
-            <td>Chatanyara</td>
-            <td>Tozan no kama</td>
-            <td>Kanigawa no tinbe</td>
-          </tr>
-          <tr>
-            <th scope="row">11.4.2020</td>
-            <td>Yonegawa</td>
-            <td>Tawata no sai</td>
-            <td>Nunchaku sho</td>
-          </tr>
-          <tr>
-            <th scope="row">25.4.2020</td>
-            <td>Shuji koshiki</td>
-            <td>Kanigawa no kama dai</td>
-            <td>Surujin</td>
-          </tr>
-          <tr>
-            <th scope="row">9.5.2020</td>
-            <td>Sakugawa chu</td>
-            <td>Hamahiga no sai</td>
-            <td>Kanigawa no tinbe</td>
-          </tr>
-          <tr>
-            <th scope="row">23.5.2020</td>
-            <td>Soeishi sho</td>
-            <td>Jigen no manjisai</td>
-            <td>Nunchaku dai</td>
-          </tr>
-        </tbody>
-      </table>
-
-    </section>
     <footer>
       <p>&copy; Salon Yuishinkai ry (Y-tunnus: 3082703-3)</p>
     </footer>
