Jukka was in an exam last month

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       <p>Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun (emonojutsu) ja Yuishinkai karaten (toshujutsu) harjoittelua itäisen Varsinais-Suomen ja läntisen Uudenmaan alueilla.
         Esimerkiksi keväällä 2020 harjoiteltiin kata-ohjelmaa Lohjalla.
       </p>
-      <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (3 dan karate &amp; kobujutsu), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
+      <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (karate 4 dan &amp; kobujutsu 3 dan), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
     </section>
 
     <!--
