--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="fi" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8">
-    <title>Kobujutsua ja Karatea Salon alueella - Salon Yuishinkai ry</title>
+    <title>Kobujutsua ja Karatea Salon ja Lohjan alueella - Salon Yuishinkai ry</title>
     <meta name="description" content="Ryukyu kobujutsua ja Yuishinkai karatea Salon alueella">
     <meta name="keywords" content="ryukyu, kobujutsu, kobudo, yuishinkai, tapiola, karate, inoue, taira, bo, sai, kama, tonfa, nunchaku, tekko, surujin, tinbe, rochin, maegeri, mawashigeri, salo, finland">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Ryukyu kobujutsua ja Yuishinkai karatea Salon alueella">
-    <meta property="og:description" content="Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun ja Yuishinkai karaten harjoittelua Salon alueella">
+    <meta property="og:description" content="Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun ja Yuishinkai karaten harjoittelua Salon ja Lohjan alueella">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Salon Yuishinkai">
     <meta property="og:url" content="https://salo.kobujutsu.fi">
