--- a/public/index.html
+++ b/public/index.html
@@ -54,18 +54,30 @@
       </p>
     </section>
     <section role="main">
-      <h2>Okinawalaisia kamppailutaitoja aseella ja ilman</h2>
-      <p>Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää Ryukyu kobujutsun (emonojutsu) ja Yuishinkai karaten (toshujutsu) harjoittelua itäisen Varsinais-Suomen ja läntisen Uudenmaan alueilla.
+      <h2>Okinawalaisia kamppailutaitoja aseilla ja ilman</h2>
+      <p>Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää 
+        Ryukyu kobujutsun (emonojutsu) ja Yuishinkai karaten (toshujutsu) harjoittelua itäisen Varsinais-Suomen 
+        ja läntisen Uudenmaan alueilla.
         Esimerkiksi keväällä 2020 harjoiteltiin kata-ohjelmaa Lohjalla.
       </p>
-      <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (karate 4 dan &amp; kobujutsu 3 dan), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
+      <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (4 dan karate &amp; kobujutsu), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
     </section>
-
+    <section role="complementary">
+      <h2>Ryukyu kobujutsun Renzoku kumite-aiheinen leiri Lohjalla 18.2.2023</h2>
+      <p>
+        Lauantaina 18.2.2023 harjoitellaan renzoku kumitea neljällä välineellä Muijalan koululla (Takaniityntie 26, 08680 Lohja).
+        <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, 
+          rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.
+      </p>
+      <p>Harjoitukset 11:00 - 13:00 ja 14:00 - 16:00.</p>
+      <p>Leirimaksu 40 euroa (Suomen Yuishinkai ry:n jäsenille 30 euroa erikoishintaan!).</p>
+      <p><a href="assets/kobujutsu-renzoku-kumite-leiri-lohjalla-2023-02-18.pdf" title="Kobujutsun renzoku kumite leiri Lohjalla">Leirimainos</a></p>
+    </section>
     <!--
     <section role="complementary">
-      <h2>Kevätkaudella harjoitukset joka toisena lauantaina 18.1. - 23.5.2020</h2>
+      <h2>Kesällä harjoitukset joka toisena lauantaina 18.4. - 23.5.2023</h2>
       <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja. <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.</p>
-      <p>Harjoitukset ohjaa Jukka Paasonen (3 dan karate &amp; kobujutsu).</p>
+      <p>Harjoitukset ohjaa Jukka Paasonen (4 dan karate &amp; kobujutsu).</p>
       <p>Harjoitusaika on kello 17:00 - 20:00, parittomien viikkojen lauantai-iltoina.</p>
       <p>Harjoituksissa keskitytään kata-tekniikoiden hiomiseen Yuishinkai karaten ja Ryukyu kobujutsun ohjelman mukaisesti.
         Harjoituksiin osallistuvalla on hyvä olla tehtynä oma henkilökohtainen suunnitelma mihin katoihin aikoo kullakin
