--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,11 @@
       <p>Salon Yuishinkai ry on vuonna 2018 perustettu seura, jonka tarkoituksena on edistää ja kehittää 
         Ryukyu kobujutsun (emonojutsu) ja Yuishinkai karaten (toshujutsu) harjoittelua itäisen Varsinais-Suomen 
         ja läntisen Uudenmaan alueilla.
-        Esimerkiksi keväällä 2020 harjoiteltiin kata-ohjelmaa Lohjalla.
+        Useimmiten toimintaa on järjestetty Lohjan Muijalassa, Nummessa ja Suomusjärvellä.
       </p>
       <p id="sahkoposti">Toiminnasta vastaa Jukka Paasonen (4 dan karate &amp; kobujutsu), jukka.paasonen [appappaapa] kobujutsu.fi.</p>
     </section>
+    <!--
     <section role="complementary">
       <h2>Ryukyu kobujutsun Renzoku kumite-aiheinen leiri Lohjalla 18.2.2023</h2>
       <p>
@@ -73,7 +74,6 @@
       <p>Leirimaksu 40 euroa (Suomen Yuishinkai ry:n jäsenille 30 euroa erikoishintaan!).</p>
       <p><a href="assets/kobujutsu-renzoku-kumite-leiri-lohjalla-2023-02-18.pdf" title="Kobujutsun renzoku kumite leiri Lohjalla">Leirimainos</a></p>
     </section>
-    <!--
     <section role="complementary">
       <h2>Kesällä harjoitukset joka toisena lauantaina 18.4. - 23.5.2023</h2>
       <p>Harjoituspaikkana Muijalan koulun liikuntasali, Takaniityntie 26, 08680 Lohja. <a href="/assets/muijalan-koulun-liikuntasaliin-sisaankaynti-n-ovesta.png" title="Kartta Muijalan koulun N-oven sijainnista">Sisäänkäynti N-ovesta, rakennuksen pohjoispuolelta.</a> Pysäköidä voi Takaniitynpolulle.</p>
